--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -20,73 +19,46 @@
             background-position: center;
             background-attachment: fixed;
         }
-        /* Custom scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: rgba(0,0,0,0.2);
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #fef01e;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #e2d71a;
-        }
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: rgba(0,0,0,0.2); }
+        ::-webkit-scrollbar-thumb { background: #fef01e; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #e2d71a; }
         .bg-noctambula { background-color: #fef01e; }
         .text-noctambula { color: #fef01e; }
         .border-noctambula { border-color: #fef01e; }
-
-        /* Estilo para ocultar el ticket en pantalla pero no en impresora */
-        #printable-ticket {
-            display: none;
-        }
-
-        /* PRINT STYLES FOR THERMAL TICKET */
+        #printable-ticket { display: none; }
         @media print {
-            #root {
-                display: none !important;
-            }
+            #root { display: none !important; }
             #printable-ticket {
                 display: block !important;
                 position: fixed;
-                left: 0;
-                top: 0;
-                width: 80mm;
-                background: white;
-                color: black;
-                padding: 5mm;
-                font-family: 'Courier New', Courier, monospace;
-                font-size: 12px;
+                left: 0; top: 0; width: 80mm;
+                background: white; color: black; padding: 5mm;
+                font-family: 'Courier New', Courier, monospace; font-size: 12px;
             }
-            @page {
-                margin: 0;
-                size: 80mm auto;
-            }
+            @page { margin: 0; size: 80mm auto; }
         }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.463.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
-    "react/": "https://esm.sh/react@^19.0.0/",
-    "react": "https://esm.sh/react@^19.0.0",
-    "xlsx": "https://esm.sh/xlsx@0.18.5",
-    "chart.js/auto": "https://esm.sh/chart.js/auto",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "xlsx": "https://esm.sh/xlsx@^0.18.5",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
     "react-dom": "https://esm.sh/react-dom@^19.2.4",
-    "chart.js/": "https://esm.sh/chart.js@^4.5.1/"
+    "chart.js/": "https://esm.sh/chart.js@^4.5.1/",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
-    <!-- Contenedor externo para el ticket de impresión -->
     <div id="printable-ticket"></div>
+    <script type="module" src="/index.tsx"></script>
     <script>
       window.deferredPrompt = null;
       window.addEventListener('beforeinstallprompt', (e) => {
@@ -94,13 +66,6 @@
         window.deferredPrompt = e;
         window.dispatchEvent(new Event('pwa-install-available'));
       });
-
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js').catch(err => console.debug('SW silent error in preview:', err));
-        });
-      }
     </script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
