--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
     "react-dom": "https://esm.sh/react-dom@^19.2.4",
     "chart.js/": "https://esm.sh/chart.js@^4.5.1/",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
